[package]
name = "svm-storage"
version = "0.0.0"
authors = ["Yaron Wittenstein <yaron.wittenstein@gmail.com>"]
license = "MIT"
edition = "2018"
readme = "README.md"
repository = "https://github.com/spacemeshos/svm"
homepage = "https://github.com/spacemeshos/svm"
description = "Spacemesh Virtual Machine"
publish = false

[dependencies]
hex = "0.4"
lazy_static = "1.4.0"
svm-kv = { path = "../kv", default-features = false }
svm-hash = { path = "../hash" }
svm-types = { path = "../types" }
svm-layout = { path = "../layout" }

[features]
default = ["default-memory"]
default-memory = ["svm-kv/default-memory"]
default-rocksdb = ["svm-kv/default-rocksdb"]
