[package]
name = "svm-app"
version = "0.0.0"
authors = ["Yaron Wittenstein <yaron.wittenstein@gmail.com>"]
license = "MIT"
edition = "2018"
publish = false

[dependencies.svm-common]
path = "../svm-common"

[dependencies.svm-kv]
path = "../svm-kv"

[dependencies.svm-storage2]
path = "../svm-storage2"

[dependencies.byteorder]
version = "1.3.2"

[dependencies.log]
version = "0.4"

[dependencies.bit-vec]
version = "0.6.1"

[dependencies.lazy_static]
version = "1.4.0"

[features]
default = ["memory", "default-rocksdb"]
memory = ["svm-kv/memory"]
default-rocksdb = ["svm-kv/default-rocksdb"]

[dev-dependencies]
maplit = "1.0.2"
