[package]
name = "svm-cli"
version = "0.1.0"
authors = ["Moshe Shababo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.svm-common]
path = "../svm-common"

[dependencies.svm-types]
path = "../svm-types"

[dependencies.svm-codec]
path = "../svm-codec"

[dependencies.svm-layout]
path = "../svm-layout"

[dependencies]
clap = "2.33.0"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
regex = "1"
