[package]
name = "svm-codec"
version = "0.0.0"
authors = ["Yaron Wittenstein <yaron.wittenstein@gmail.com>"]
license = "MIT"
edition = "2018"
readme = "README.md"
repository = "https://github.com/spacemeshos/svm"
homepage = "https://github.com/spacemeshos/svm"
description = "Spacemesh Virtual Machine"
publish = false

[dependencies.svm-common]
path = "../svm-common"

[dependencies.svm-layout]
path = "../svm-layout"

[dependencies.svm-types]
path = "../svm-types"

[dependencies.byteorder]
version = "1.3.2"

[dependencies.bit-vec]
version = "0.6.1"

[dev-dependencies]
maplit = "1.0.2"