[package]
name = "svm-codec"
version = "0.0.0"
authors = ["Yaron Wittenstein <yaron.wittenstein@gmail.com>"]
license = "MIT"
edition = "2018"
readme = "README.md"
repository = "https://github.com/spacemeshos/svm"
homepage = "https://github.com/spacemeshos/svm"
description = "Spacemesh Virtual Machine"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.svm-common]
path = "../svm-common"

[dependencies.svm-layout]
path = "../svm-layout"

[dependencies.svm-types]
path = "../svm-types"

[dependencies]
byteorder = "1.3.2"
bit-vec = "0.6.1"
serde_json = "1.0"

[dev-dependencies]
maplit = "1.0.2"